<resources>
    <string name="app_name">Hyouka_PI52A_4</string>
    <string name="one_string">one</string>
    <string name="two_string">two</string>
    <string name="three_string">three</string>

    <string name="Title">Big Bang\nRPSLS</string>
    <string name="Big">BIG</string>
    <string name="Bang">BANG</string>
    <string name="RPSLS">RPSLS</string>

    <string name="c_c_title1">CHOOSE</string>
    <string name="c_c_title2">YOUR</string>
    <string name="c_c_title3">HERO</string>

    <string name="t_title1">RPSLS</string>
    <string name="t_title2">TUTORIAL</string>

    <string name="r_mainMenu">Main Menu</string>
    <string name="r_playAgain">Again?</string>

    <string name="play">PLAY</string>
    <string name="tutorial">TUTORIAL</string>
</resources>